# similarity-notebooks

./: .gitignore  LICENSE  README.md  SemSim_search_polars.ipynb  eds-hm.json  hemo.json  pyproject.toml  semim_benchmark.ipynb  sim_search.ipynb
