[tool.poetry]
name = "semsim"
version = "0.1.0"
description = ""
authors = ["Tim  Putman <putmantime@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.0.3"
oaklib = "^0.5.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
